<resources>
    <string name="app_name">InformaGC</string>

    //Botones
    <string name="botonGuardar">Guardar</string>
    <string name="botonEliminar">Eliminar</string>
    <string name="botonLogout">Cerrar Sesión</string>
    <string name="botonCrearCuenta">Crear Cuenta</string>
    <string name="botonAtras">Atrás</string>
    <string name="botonIniciar_Sesion">Iniciar Sesión</string>
    <string name="botonEnviar">Enviar</string>


    //Mensajes
    <string name="mensaje_error_activity_login">Error en inicio de sesión</string>
    <string name="mensaje_satisfactorio_activity_login">Sesión iniciada</string>
    <string name="mensaje_satisfactorio_crear_cuenta">Cuenta creada satisfactoriamente</string>
    <string name="mensaje_error_crear_cuenta">La cuenta no ha podido ser creada</string>
    <string name="mensaje_error_introduzca_correo">Correo vacío o no válido</string>
    <string name="mensaje_error_introduzca_password">Password vacía o muy corta</string>
    <string name="mensaje_error_introduzca_password_diferente">La password no coincide</string>
    <string name="mensaje_registro">Recibirá un correo electrónico con las instrucciones para recuperar su contraseña.</string>


    //Texto
    <string name="titulo_app">InformaGC</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="password">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="link_para_registrarse">Registrarse</string>
    <string name="repetirpassword">Repetir Contraseña</string>
    <string name="link_para_recuperar_password">Recuperar Contraseña</string>
    <string name="terminos_y_condiciones">Acepto los Términos y Condiciones</string>
    <string name="direccion">Dirección</string>
    <string name="descripcion">Descripción</string>



    //Nombre de las categorias
    <string name="aceras_y_calzadas">Aceras y calzadas</string>
    <string name="jardines_y_areas_caninas">Jardines y áreas caninas</string>
    <string name="bancos">Bancos</string>
    <string name="barandillas">Barandillas</string>
    <string name="farolas_e_iluminacion">Farolas e iluminación</string>
    <string name="papeleras_y_contenedores">Papeleras y contenedores</string>
    <string name="pivotes_y_bolardos">Pivotes y bolardos</string>
    <string name="playas">Playas</string>
    <string name="semaforos_y_senales">Semáforos y señales</string>
    <string name="parques">Parques</string>
    <string name="saneamiento_y_abastecimiento">Saneamiento y abastecimiento</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //API key google Maps
    <string name="google_maps_key">AIzaSyA_wynNtO5-8h-9fVCmrwV0C8tfj5mMqnk</string>




</resources>
