<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_blanco"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <fragment
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:id="@+id/map"
                android:layout_marginBottom="10dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cuadro_texto_azul_redondeado"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/direccion"
                android:inputType="textPostalAddress"
                android:paddingLeft="5dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imagenProblema"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cuadro_texto_azul_redondeado"
                app:srcCompat="@drawable/ic_road" />


            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/cuadro_texto_azul_redondeado"
                android:drawableLeft="@drawable/ic_description"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/descripcion"
                android:textSize="18sp" />

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="25dp"
                android:paddingBottom="14dp"
                app:columnCount="9"
                app:rowCount="2">

                <ImageView
                    android:id="@+id/foto1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_columnSpan="2"
                    app:srcCompat="@drawable/ic_addphoto" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="66dp"
                    android:background="?android:attr/listDivider"
                    app:layout_columnSpan="2"
                    app:layout_rowSpan="2" />

                <ImageView
                    android:id="@+id/foto2"
                    android:layout_width="231dp"
                    android:layout_height="wrap_content"
                    app:layout_columnSpan="2"
                    app:srcCompat="@drawable/ic_addphoto" />

                <ImageView
                    android:id="@+id/foto3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_addphoto" />


            </android.support.v7.widget.GridLayout>

            <Button
                android:id="@+id/botonEnviar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/boton_redondo"
                android:text="@string/botonEnviar"
                android:textColor="@color/cuadros_de_texto" />



        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>